package com.acl.screens;

import com.acl.ObstACLTower;
import com.badlogic.gdx.ScreenAdapter;

public class MenuScreen extends ScreenAdapter {

    public MenuScreen(ObstACLTower obstACLTower) {
    }

    @Override
    public void show() {
    }

    @Override
    public void render(float delta) {
    }

}
